rgw: add an outstanding_requests perf counter

Expose the outstanding_requests variable so we can more easily tune rgw_max_concurrent_requests.

Related-to: https://tracker.ceph.com/issues/48358
Signed-off-by: Dan van der Ster <daniel.vanderster@cern.ch>